--- a/index.html
+++ b/index.html
@@ -1,13 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Diego Piedra | Desarrollador</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
-<body>
-  DiegoPiedra.com está en contrucción
+<body class="size">
+  <nav class="nav primary">
+    <input type="checkbox" id="nav__opener" class="nav__opener">
+    <div class="nav__title">
+      <div class="logo bn" title="Diego Piedra Desarrollador"></div>
+    </div>
+    <label for="nav__opener" class="nav__opener-indicator light">
+      <span class="nav__opener-indicator__open">
+        <i class="fas fa-bars"></i>
+      </span>
+      <span class="nav__opener-indicator__close">
+        <i class="fas fa-times"></i>
+      </span>
+    </label>
+    <ul class="nav__list">
+      <li class="nav__item"><a class="nav__link" href="#index">Inicio</a></li>
+      <li class="nav__item"><a class="nav__link" href="#about">Sobre mi</a></li>
+      <li class="nav__item"><a class="nav__link" href="#services">Servicios</a></li>
+      <li class="nav__item"><a class="nav__link" href="#portfolio">Portafolio</a></li>
+      <li class="nav__item"><a class="nav__link" href="#contact">Contacto</a></li>
+    </ul>
+  </nav>
+  <main class="main-container">
+    <section id="index" class="section primary">
+      <div class="section__wrap">
+        <img src="img/profile.jpg" alt="" class="big-circle">
+        <h2 class="section__title">Diego <span class="text-secondary">Piedra</span></h2>
+        <p class="characteristics section__subtitle">
+          Yo soy
+        </p>
+      </div>
+    </section>
+    <section id="about" class="section secondary">
+      <h2 class="section__title">Sobre mi</h2>
+    </section>
+    <section id="services" class="section primary">
+      <h2 class="section__title">Servicios</h2>
+    </section>
+    <section id="portfolio" class="section secondary">
+      <h2 class="section__title">Portafolio</h2>
+    </section>
+    <section id="contact" class="section primary">
+      <h2 class="section__title">Contacto</h2>
+    </section>
+    <footer>
 
+    </footer>
+  </main>
 </body>
 </html>
