--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="theme-color" content="#06163d">
   <title>Diego Piedra | Desarrollador</title>
   <link rel="shortcut icon" type="image/png" href="img/icon.png"/>
   <link rel="stylesheet" href="styles.css">
@@ -34,7 +35,7 @@
   <main class="main-container">
     <section id="index" class="section primary">
       <div class="section__wrap">
-        <img src="img/profile.jpg" alt="" class="big-circle">
+        <img src="img/profile.webp" alt="" class="big-circle">
         <h2 class="section__title">Diego <span class="text-secondary">Piedra</span></h2>
         <p class="characteristics section__subtitle">
           Yo soy
