Implement ionicons, update index, add button clases

--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
   <title>Diego Piedra | Desarrollador</title>
   <link rel="shortcut icon" type="image/png" href="img/icon.png"/>
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"> -->
+  <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
 </head>
 <body class="size">
   <nav class="nav primary">
     <input type="checkbox" id="nav__opener" class="nav__opener">
     <div class="nav__title">
-      <div class="logo bn" title="Diego Piedra Desarrollador"></div>
+      <div class="logo bn" title="Logo de Diego Piedra Desarrollador"></div>
     </div>
     <label for="nav__opener" class="nav__opener-indicator light">
       <span class="nav__opener-indicator__open">
-        <i class="fas fa-bars"></i>
+        <i class="icon ion-md-menu"></i>
       </span>
       <span class="nav__opener-indicator__close">
-        <i class="fas fa-times"></i>
+        <i class="icon ion-md-close"></i>
       </span>
     </label>
     <ul class="nav__list">
@@ -40,6 +41,10 @@
         <p class="characteristics section__subtitle">
           Yo soy
         </p>
+        <div>
+          <a class="btn secondary m" href="#contact"><i class="icon ion-md-mail"></i> Solicitar servicios</a>
+          <a class="btn text-secondary m no-bg" href="#about">Conocer más</a>
+        </div>
       </div>
     </section>
     <section id="about" class="section secondary">
