--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <section id="index" class="section primary">
       <div class="section__wrap">
         <img src="img/profile.webp" alt="" class="big-circle">
-        <h2 class="section__title">Diego <span class="text-secondary">Piedra</span></h2>
+        <h1 class="section__title">Diego <span class="text-secondary">Piedra</span></h1>
         <p class="characteristics section__subtitle">
-          Yo soy
+          Yo soy <span class="hide">desarrollador web, programador, tutor de programación, admin de bases de datos, entusiasta de la tecnología.</span>
         </p>
         <div>
           <a class="btn secondary m" href="#contact"><i class="icon ion-md-mail"></i> Solicitar servicios</a>
@@ -47,17 +47,33 @@
         </div>
       </div>
     </section>
-    <section id="about" class="section secondary">
-      <h2 class="section__title">Sobre mi</h2>
+    <section id="about" class="section">
+      <h2 class="section__title text-primary mt mb x3">Sobre mi</h2>
     </section>
     <section id="services" class="section primary">
-      <h2 class="section__title">Servicios</h2>
+      <h2 class="section__title mt mb x3">Servicios</h2>
     </section>
-    <section id="portfolio" class="section secondary">
-      <h2 class="section__title">Portafolio</h2>
+    <section id="portfolio" class="section">
+      <h2 class="section__title mt mb x3">Portafolio</h2>
+      <div class="card horizontal">
+        <div class="card__img">
+          <img src="img/generador.webp" alt="">
+          <a class="card__tag fb" href="https://www.facebook.com/GeneradorDeHorarios/" target="_blank">Facebook +8k <i class="icon ion-md-thumbs-up"></i></a>
+        </div>
+        <div class="card__text">
+          <img src="img/generador-logo.webp" alt="">
+          <h3 class="card__title text-generador">Generador de horarios</h3>
+          <p class="text-black text-font">
+            Este es un proyecto creado por estudiantes entusiastas de la Universidad de Costa Rica, los cuales en su tiempo libre tomaron la iniciativa de hacer un programa para crear horarios y compartirlo para que otros estudiantes lo pudieran utilizar.
+            <br>
+            Actualmente tiene <b>más de 8 mil seguidores</b> en Facebook y en temporada alta de visitas supera las <b>35 mil sesiones por mes.</b>
+          </p>
+          <a class="btn generador pull-right" href="http://horarios.coldideas.com" target="_blank"> <i class="icon ion-md-eye"></i> Ver proyecto</a>
+        </div>
+      </div>
     </section>
-    <section id="contact" class="section primary">
-      <h2 class="section__title">Contacto</h2>
+    <section id="contact" class="section">
+      <h2 class="section__title text-primary mt mb x3">Contacto</h2>
     </section>
     <footer>
 
