Portafolio whit background image

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
           <p class="text-black mb x3">
             <b>WhatsApp:</b> (506) 8655 6068
           </p>
+          <p class="text-black mb x3">
+            <b>Ubicación:</b> Esparza, Puntarenas, Costa Rica
+          </p>
         </div>
         <form class="form contact__form" method="POST" action="https://formspree.io/diegojopiedra@gmail.com">
           <input type="email" name="Correo" placeholder="Correo electrónico" class="form__input" required>
