Services page OK

--- a/index.html
+++ b/index.html
@@ -47,11 +47,34 @@
         </div>
       </div>
     </section>
-    <section id="about" class="section">
-      <h2 class="section__title text-primary mt mb x3">Sobre mi</h2>
+    <section id="about" class="section primary">
+      <h2 class="section__title mt mb x3">Sobre mi</h2>
     </section>
-    <section id="services" class="section primary">
-      <h2 class="section__title mt mb x3">Servicios</h2>
+    <section id="services" class="section">
+      <h2 class="section__title text-primary mt mb x3">Servicios</h2>
+      <div class="grid gx1 col-xs-1 col-md-2 col-lg-3">
+        <div class="card shadow hover">
+          <div class="card__text text-black">
+            <div class="card__title text-secondary font-x3"><i class="icon ion-md-code"></i></div>
+            <h3 class="card__title">Creador de sitios web</h3>
+            <p>Se desarrollan sitios web para promocionar empresas, productos o profesionales. Con las mejores prácticas y tecnología de punta puede llevar su negocio al siguiente nivel teniendo presencia en línea.</p>
+          </div>
+        </div>
+        <div class="card shadow hover">
+          <div class="card__text text-black">
+            <div class="card__title text-secondary font-x3"><i class="icon ion-md-laptop"></i></div>
+            <h3 class="card__title">Desarrollador de software</h3>
+            <p>Con capacidad de análisis para la el diseño y la creación de software hecho a la medida, enfocado en mejorar los procesos internos de las organizaciones.</p>
+          </div>
+        </div>
+        <div class="card shadow hover">
+          <div class="card__text text-black">
+            <div class="card__title text-secondary font-x3"><i class="icon ion-md-person"></i></div>
+            <h3 class="card__title">Tutor de programación</h3>
+            <p>Clases particulares para estudiantes de programación que necesiten ayuda con principios de la programación, programación orientada a objetos, algoritmos, patrones de diseño, programación en Java, programación web.</p>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="portfolio" class="section">
       <h2 class="section__title mt mb x3">Portafolio</h2>
@@ -92,6 +115,7 @@
           <input type="email" name="Correo" placeholder="Correo electrónico" class="form__input" required>
           <select name="Solicitud" class="form__input">
             <option>Solicitar como desarrollador de software</option>
+            <option>Solicitar como desarrollador web</option>
             <option>Solicitar como tutor</option>
             <option>Consulta</option>
             <option>Otros</option>
