About fisrt part

--- a/index.html
+++ b/index.html
@@ -47,8 +47,20 @@
         </div>
       </div>
     </section>
-    <section id="about" class="section primary">
-      <h2 class="section__title mt mb x3">Sobre mi</h2>
+    <section id="about" class="section">
+      <h2 class="section__title mt mb x3 text-primary">Sobre mi</h2>
+      <div id="about__content">
+        <img src="img/developer.webp" alt="Imagen de un desarrollador">
+        <div class="card shadow">
+          <div class="card__text">
+            <p>
+              Apasionado de las nuevas tecnologías, del desarrollo de software y de la creación de sitios web. He sido estudiante de la carrera de Informática Empresarial en la Universidad de Costa Rica desde 2013, acumulando una importante cantidad de experiencia a nivel técnico desde entonces.
+              <br>
+              Con capacidad de anticipación y adaptación al cambio, experiencia en trabajo en grupo, comunicación asertiva, capacidad empatía con los demás. Estoy en disposición de dar lo mejor de mí en cada trabajo que se me presente.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="services" class="section">
       <h2 class="section__title text-primary mt mb x3">Servicios</h2>
@@ -125,9 +137,6 @@
         </form>
       </div>
     </section>
-    <footer>
-
-    </footer>
   </main>
 </body>
 </html>
