--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"> -->
   <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
 </head>
-<body class="size">
+<body>
   <nav class="nav primary">
     <input type="checkbox" id="nav__opener" class="nav__opener">
     <div class="nav__title">
@@ -49,7 +49,7 @@
     </section>
     <section id="about" class="section">
       <h2 class="section__title mt mb x3 text-primary">Sobre mi</h2>
-      <div id="about__content">
+      <div id="about__content" class="mb">
         <img src="img/developer.webp" alt="Imagen de un desarrollador">
         <div class="card shadow">
           <div class="card__text">
@@ -60,6 +60,66 @@
             </p>
           </div>
         </div>
+      </div>
+      <h3 class="section__title mt mb x3 text-secondary">Conocimientos</h3>
+      <div id="about__knoleg" class="mb">
+        <p>HTML</p>
+        <div class="loader">
+          <div class="loader__indicator" style="width: 95%">Elevado</div>
+        </div>
+        <p>CSS</p>
+        <div class="loader">
+          <div class="loader__indicator" style="width: 70%">Intermedio-Elevado</div>
+        </div>
+        <p>PHP puro</p>
+        <div class="loader">
+          <div class="loader__indicator" style="width: 85%">Elevado</div>
+        </div>
+        <p>PHP (Laravel)</p>
+        <div class="loader">
+          <div class="loader__indicator" style="width: 65%">Intermedio</div>
+        </div>
+        <p>SQL</p>
+        <div class="loader">
+          <div class="loader__indicator" style="width: 60%">Intermedio</div>
+        </div>
+        <p>JavaScript puro</p>
+        <div class="loader">
+          <div class="loader__indicator" style="width: 65%">Intermedio</div>
+        </div>
+        <p>JavaScript (jQuery)</p>
+        <div class="loader">
+          <div class="loader__indicator" style="width: 70%">Intermedio</div>
+        </div>
+        <p>JavaScript (VueJS)</p>
+        <div class="loader">
+          <div class="loader__indicator" style="width: 85%">Elevado</div>
+        </div>
+        <p>JavaScript (Angular)</p>
+        <div class="loader">
+          <div class="loader__indicator" style="width: 40%">Básico</div>
+        </div>
+        <p>Java</p>
+        <div class="loader">
+          <div class="loader__indicator" style="width: 70%">Intermedio</div>
+        </div>
+        <p>C#</p>
+        <div class="loader">
+          <div class="loader__indicator" style="width: 40%">Básico</div>
+        </div>
+        <p>Diseño de bases de datos</p>
+        <div class="loader">
+          <div class="loader__indicator" style="width: 70%">Intermedio-Elevado</div>
+        </div>
+        <p>Administración de servidores Linux</p>
+        <div class="loader">
+          <div class="loader__indicator" style="width: 50%">Básico</div>
+        </div>
+        <p>Control de versiones GIT</p>
+        <div class="loader">
+          <div class="loader__indicator" style="width: 50%">Básico</div>
+        </div>
+
       </div>
     </section>
     <section id="services" class="section">
@@ -123,7 +183,7 @@
             <b>Ubicación:</b> Esparza, Puntarenas, Costa Rica
           </p>
         </div>
-        <form class="form contact__form" method="POST" action="https://formspree.io/diegojopiedra@gmail.com">
+        <form class="form contact__form" method="POST" action="https://formspree.io/diego.piedraaraya@ucr.ac.cr">
           <input type="email" name="Correo" placeholder="Correo electrónico" class="form__input" required>
           <select name="Solicitud" class="form__input">
             <option>Solicitar como desarrollador de software</option>
