Cambiar foto y agregar caracteristica
Experto en ciberseguridad

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
   <main class="main-container">
     <section id="index" class="section primary">
       <div class="section__wrap">
-        <img src="img/profile.webp" alt="" class="big-circle">
+        <img src="img/yo.webp" alt="" class="big-circle">
         <h1 class="section__title">Diego <span class="text-secondary">Piedra</span></h1>
         <p class="characteristics section__subtitle">
-          Yo soy <span class="hide">desarrollador web, programador, tutor de programación, admin de bases de datos, entusiasta de la tecnología.</span>
+          Yo soy <span class="hide">desarrollador web, programador, tutor de programación, admin de bases de datos, experto en seguridad, entusiasta de la tecnología.</span>
         </p>
         <div>
           <a class="btn secondary m" href="#contact"><i class="icon ion-md-mail"></i> Solicitar servicios</a>
